--- a/characters.html
+++ b/characters.html
@@ -30,9 +30,12 @@
     </header>
 
     <main>
-        <h1>Персонажи звездного Экспреса на момент версии 3.6 </h1><br>
+        <h1 class="h1">Персонажи звездного Экспреса на момент версии 3.6 </h1>
         <div class="link-pers">
-            <img src="ecspres.png" alt="звездный экспресс">
+            <div class="fract">
+                <img src="ecspres.png" alt="звездный экспресс">
+                <p>Звездный экспресс</p>
+            </div>
         </div>
     </main>
 
