--- a/characters.html
+++ b/characters.html
@@ -13,7 +13,7 @@
     <header>
         <div class="head">
             <div class="logo">
-                <img src="logo.png" alt="логотип игры Honkai: Star Rail">
+                <img src="img/logo.png" alt="логотип игры Honkai: Star Rail">
                 <a href="index.html" class="logo">Honkai: Star Rail</a>
             </div>
             <nav>
@@ -30,14 +30,75 @@
     </header>
 
     <main>
-        <h1 class="h1">Персонажи звездного Экспреса на момент версии 3.6 </h1>
-        <div class="link-pers">
-            <div class="fract">
-                <img src="ecspres.png" alt="звездный экспресс">
-                <p>Звездный экспресс</p>
+    <h1>Персонажи звездного Экспресса на момент версии 3.6</h1>
+
+    <div class="link-pers">
+        <div class="person">
+            <img src="img/Frame 1.png" alt="Химеко - член экипажа Звездного экспресса">
+            <div class="person-info">
+                <h3>Химеко</h3>
+                <div class="role">Огненный | Разрушение</div>
+                <div class="traits">
+                    <span class="trait">Бафф атаки</span>
+                    <span class="trait">Пробитие уязвимости</span>
+                    <span class="trait">Урон по площади</span>
+                </div>
+                <div class="description">
+                    <p>Красотка с непредсказуемым характером. Обладает мощными огненными атаками, способными сокрушить множественных противников.</p>
+                </div>
             </div>
         </div>
-    </main>
+
+        <div class="person">
+            <img src="img/Frame 3.png" alt="Вельт Ян - опытный наставник экипажа">
+            <div class="person-info">
+                <h3>Вельт Ян</h3>
+                <div class="role">Воображаемый | Нигилист</div>
+                <div class="traits">
+                    <span class="trait">Контроль толпы</span>
+                    <span class="trait">Замедление</span>
+                    <span class="trait">Иммобилизация</span>
+                </div>
+                <div class="description">
+                    Опытный наставник и бывший член экипажа. Специализируется на контроле поля боя и ослаблении врагов.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="link-pers1">
+        <div class="person1">
+            <img src="img/Frame 2.png" alt="Дань Хэн - мастер ветра из семьи Луофу">
+            <div class="person1-info">
+                <h3>Дань Хэн • Небожитель</h3>
+                <div class="role">Ветряный | Охота</div>
+                <div class="traits">
+                    <span class="trait">Скорость</span>
+                    <span class="trait">Критический урон</span>
+                    <span class="trait">Дополнительные ходы</span>
+                </div>
+                <div class="description">
+                    Небожитель с Корабля Луофу, владеющий силой ветра. Молниеносные атаки и способность получать дополнительные ходы делают его опасным охотником.
+                </div>
+            </div>
+        </div>
+        <div class="person1">
+            <img src="img/Frame 4.png" alt="Март 7 - девушка, найденная в кристалле">
+            <div class="person1-info">
+                <h3>Март 7</h3>
+                <div class="role">Ледяной | Сохранение</div>
+                <div class="traits">
+                    <span class="trait">Щиты</span>
+                    <span class="trait">Контрперенос</span>
+                    <span class="trait">Снятие дебаффов</span>
+                </div>
+                <div class="description">
+                    Таинственная девушка, найденная в кристалле. Защищает союзников ледяными щитами и контратакует при получении урона.
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
     <footer>
         <p>&copy; 2025 Honkai: Star Rail</p>
