--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="head">
             <div class="logo">
-                <img src="logo.png" alt="логотип игры Honkai: Star Rail">
+                <img src="img\logo.png" alt="логотип игры Honkai: Star Rail">
                 <a href="index.html" class="logo">Honkai: Star Rail</a>
             </div>
             <nav>
@@ -32,25 +32,25 @@
     <main>
         <div class="baner">
             <h1>Обновление версии 3.6 «Темень вернулась на пустоши»</h1>
-            <img src="банер.png" alt="Обновление версии 3.6 «Темень вернулась на пустоши»" >
+            <img src="img/банер.png" alt="Обновление версии 3.6 «Темень вернулась на пустоши»" >
             <p><i>"Уж кончается ночь, и заря недалёко. Чужеземцы путь свой беспрестанно продолжают, и сойдутся вновь они на краю света, где всей земле светит взошедшая утренняя звезда."</i></p>
         </div><br>
 
         <div class="news">
             <div class="new">
-                <img src="new1.jpg" alt="Трейлер персонажа Дань Хэн: Освободитель Пустошей: «Дом»">
+                <img src="img/new1.jpg" alt="Трейлер персонажа Дань Хэн: Освободитель Пустошей: «Дом»">
                 <h4>Трейлер персонажа Дань Хэн: Освободитель Пустошей: «Дом»</h4>
             </div>
             <div class="new">
-                <img src="new2.jpg" alt="«Зову дракона земли не быть» Дань Хэн: Освободитель Пустошей">
+                <img src="img/new2.jpg" alt="«Зову дракона земли не быть» Дань Хэн: Освободитель Пустошей">
                 <h4>«Зову дракона земли не быть» Дань Хэн: Освободитель Пустошей | «Ближе к звёздам»</h4>
             </div>
             <div class="new">
-                <img src="new3.jpg" alt="Трейлер путешествия тысячи звёзд: «Сказания о героях Амфореуса»">
+                <img src="img/new3.jpg" alt="Трейлер путешествия тысячи звёзд: «Сказания о героях Амфореуса»">
                 <h4>Трейлер путешествия тысячи звёзд: «Сказания о героях Амфореуса»</h4>
             </div>
             <div class="new">
-                <img src="new4.jpg" alt="Короткометражный анимационный фильм Honkai: Star Rail | «Тяготы пути»">
+                <img src="img/new4.jpg" alt="Короткометражный анимационный фильм Honkai: Star Rail | «Тяготы пути»">
                 <h4>Короткометражный анимационный фильм Honkai: Star Rail | «Тяготы пути»</h4>
             </div>
         </div>
@@ -63,13 +63,13 @@
             <h1>Honkai: Star Rail</h1>
             <p>Хонкай: Стар Рейл — это компьютерная игра в жанре ролевой игры (RPG), разработанная компанией HoYoverse. Она погружает игроков в захватывающий научно-фантастический мир, где человечество борется с загадочными существами, известными как Стеллароны. Эти космические сущности обладают огромной силой и могут изменять реальность, что приводит к конфликтам между различными фракциями.</p><br>
             <div class="opisanie-img">
-                <img src="new5.jpg" alt="охотники за Стелларонами под дождем">
+                <img src="img/new5.jpg" alt="охотники за Стелларонами под дождем">
             </div>
             <p>В игре представлено множество уникальных персонажей, каждый из которых обладает своими способностями и характером. Игроки могут формировать отряд из до пяти героев, каждый из которых имеет свою специализацию и роль в бою. Персонажи развиваются по мере прохождения игры, получая новые навыки и улучшения, что позволяет игрокам создавать разнообразные стратегии и тактики.</p><br>
             <p>Хонкай: Стар Рейл предлагает игрокам исследовать разнообразные локации, включая футуристические города, заброшенные лаборатории и таинственные планеты. Каждая зона наполнена своими уникальными особенностями и секретами, что делает процесс исследования увлекательным и разнообразным. В игре также есть множество головоломок, которые требуют от игроков логического мышления и внимательности.</p><br>
             <p>Сражения в Хонкай: Стар Рейл динамичны и разнообразны. Игроки могут использовать различные комбинации атак и способностей, чтобы побеждать врагов. Боевая система игры включает в себя элементы тактики и стратегии, что позволяет игрокам выбирать оптимальные решения в зависимости от ситуации. Кроме того, в игре есть возможность прокачки и улучшения оружия и экипировки, что делает каждый бой уникальным.</p><br>
             <div class="opisanie-img2">
-                <img src="new6.jpg" alt="звездный экспресс">
+                <img src="img/new6.jpg" alt="звездный экспресс">
             </div>
             <p>Сюжет Хонкай: Стар Рейл полон интриг, неожиданных поворотов и эмоциональных моментов. Игроки будут погружены в историю, полную тайн и загадок, где каждое их решение может повлиять на развитие событий. Сюжетная линия игры разделена на несколько актов, каждый из которых раскрывает новые аспекты мира Хонкай и взаимоотношений между персонажами.</p><br>
             <p>Хонкай: Стар Рейл отличается высоким качеством графики и детализированным миром. Разработчики уделили большое внимание проработке окружения, персонажей и анимаций, что создает ощущение погружения и реализма. Музыкальное сопровождение игры также заслуживает отдельной похвалы, добавляя эмоциональности и драматизма в ключевые моменты.</p><br>
@@ -78,28 +78,28 @@
 
         <h1>Персонажи</h1>
 
-        <div class="person">
+        <div class="personag">
             <div class="pers">
                 <a href="character.html">
-                    <img src="person1.jpg" alt="Персонаж звездного экспреса Химико">
+                    <img src="img/person1.jpg" alt="Персонаж звездного экспреса Химико">
                     <p>Химеко</p>
                 </a>
             </div>
             <div class="pers">
                 <a href="character.html">
-                    <img src="person2.jpg" alt="Персонаж звездного экспреса Вельт">
+                    <img src="img/person2.jpg" alt="Персонаж звездного экспреса Вельт">
                     <p>Вельт</p>
                 </a>
             </div>
             <div class="pers">
                 <a href="character.html">
-                    <img src="person3.jpg" alt="Персонаж звездного экспреса Дань Хен">
+                    <img src="img/person3.jpg" alt="Персонаж звездного экспреса Дань Хен">
                     <p>Дань Хен</p>
                 </a>
             </div>
             <div class="pers">
                 <a href="character.html">
-                    <img src="person4.jpg" alt="Персонаж звездного экспреса Март 7">
+                    <img src="img/person4.jpg" alt="Персонаж звездного экспреса Март 7">
                     <p>Март 7</p>
                 </a>
             </div>
