--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="news.html">Новости</a></li>
                     <li><a href="media.html">Медия</a></li>
                     <li><a href="characters.html">Персонажи|Миры</a></li>
-                    <li><a href="guide.html">Гайды</a></li>
+                    <li><a href="guides.html">Гайды</a></li>
                     <li><a href="community.html">форум</a></li>
                 </ul>
             </nav>
